--- a/PasswordManagerMainWindow/Properties/Resources.ru-RU.resx
+++ b/PasswordManagerMainWindow/Properties/Resources.ru-RU.resx
@@ -219,6 +219,9 @@
   <data name="Password" xml:space="preserve">
     <value>Пароль</value>
   </data>
+  <data name="PasswordLengthSettingHeader" xml:space="preserve">
+    <value>Длина генерированого пароля</value>
+  </data>
   <data name="PasswordRequest" xml:space="preserve">
     <value>Введите пароль</value>
   </data>
