--- a/PasswordManagerMainWindow/Properties/Resources.ru-RU.resx
+++ b/PasswordManagerMainWindow/Properties/Resources.ru-RU.resx
@@ -135,6 +135,24 @@
   <data name="AddFormHeader" xml:space="preserve">
     <value>Добавить запись</value>
   </data>
+  <data name="ChangeEmailFormHeader" xml:space="preserve">
+    <value>Смена почты</value>
+  </data>
+  <data name="ChangeEmailNewEmail" xml:space="preserve">
+    <value>Новая почта</value>
+  </data>
+  <data name="ConfirmEmailChangeFormHeader" xml:space="preserve">
+    <value>Подтверждение смены</value>
+  </data>
+  <data name="ConfirmEmailChangeFormHint" xml:space="preserve">
+    <value>Введите код, который вы получили на старую почту</value>
+  </data>
+  <data name="ConfirmEmailChangeVerificationCode" xml:space="preserve">
+    <value>Код подтверждения</value>
+  </data>
+  <data name="ConfirmEmailChangeWrongCode" xml:space="preserve">
+    <value>Неверный код</value>
+  </data>
   <data name="CreateNewAccount" xml:space="preserve">
     <value>Создать новый аккаунт</value>
   </data>
