Refactor cs files

--- a/PasswordManagerMainWindow/Properties/Resources.ru-RU.resx
+++ b/PasswordManagerMainWindow/Properties/Resources.ru-RU.resx
@@ -367,7 +367,7 @@
     <value>Подтвердить</value>
   </data>
   <data name="TwoStepAuthenticationTitle" xml:space="preserve">
-    <value>Двохфакторная аунтефикация</value>
+    <value>Двофакторна аутентификация</value>
   </data>
   <data name="UserExists" xml:space="preserve">
     <value>Пользователь уже существует</value>
