--- a/PasswordManagerMainWindow/Properties/Resources.uk-UA.resx
+++ b/PasswordManagerMainWindow/Properties/Resources.uk-UA.resx
@@ -367,7 +367,7 @@
     <value>Підтвердити</value>
   </data>
   <data name="TwoStepAuthenticationTitle" xml:space="preserve">
-    <value>Двохфакторна аунтифікація</value>
+    <value>Двофакторна аутентифікація</value>
   </data>
   <data name="UserExists" xml:space="preserve">
     <value>Користувач уже існує</value>
